style: fixed line-height and letter-spacing

--- a/styles.css
+++ b/styles.css
@@ -12,6 +12,8 @@ body{
     margin-right: auto;
     margin-left: auto;
     max-width: 42rem;
+    letter-spacing: 0.01rem;
+    line-height: 32px;
 }
 
 hr{
